Package: matrixTests
====================

Version 0.2 [TBD]

NEW FEATURES:

 * Added Anderson Darling test: `row_andersondarling` and `col_andersondarling`.

BUG FIXES:

 * Waerden and Flinger-Killeen tests no longer produce NA results when a whole group has only NA values in x.
 * Wilcoxon tests no longer produce double warning messages when some rows have no remaining observations.
 * Paired t-test no longer returns var.diff = 0 when all paired observations are missing.

CHANGES:

 * Null-mean and null-ratio arguments are now more consistent across functions: previously named `mu` and `ratio`, now consistently named `null`.
 * The position of `null` argument is now more consistent across functions: `null` always comes before the `alternative` argument.
 * `row_ievora` and `col_ievora` functions are removed. ievora method is a simple application of a Bartlett's test followed by a Student's t-test and can be performed manually.
 * `Inf` values in `wilcox_*` tests are no longer removed but treated as highest ranks in order to be consistent with base R 4.0.0. implementation.
 * Cosinor gets a separate warning for the case where all observations come from the same time-point within the specified period.
 * Missing argument errors no longer reference `force()` in their error messages.
 * Warning message about constant values in rows are now consistent between tests.
 * Warning message about too few remaining observations are now more consistent between wilcoxon and t tests.
 * When a test cannot be executed all test-specific outputs (test statistic, standard error, and degrees of freedom, not just p-values and confidence intervals as before) are now turned to NA for that row/column.

INTERNAL:

 * Slightly improved the speed of all tests in cases with sample sizes bigger than 100.
 * Improved the speed of Wilcox tests, specially in cases with ties.