@@ -65,6 +65,12 @@ res1 <- nortest_andersondarling(x)
 res2 <- row_andersondarling(x)
 stopifnot(all.equal(res1, res2))
 
+# large sample
+x <- rnorm(10^6)
+res1 <- nortest_andersondarling(x)
+res2 <- row_andersondarling(x)
+stopifnot(all.equal(res1, res2))
+
 # TODO: add tests for Inf and -Inf values once decided how to handle them.
 
 
