@@ -85,6 +85,13 @@ res1 <- base_f_var(x, y)
 res2 <- row_f_var(x, y)
 stopifnot(all.equal(res1, res2))
 
+# large sample
+x <- rnorm(10^6)
+y <- rnorm(10^6)
+res1 <- base_f_var(x, y)
+res2 <- row_f_var(x, y)
+stopifnot(all.equal(res1, res2))
+
 # TODO: add tests for Inf and -Inf values once decided how to handle them.
 
 
