@@ -72,6 +72,13 @@ res1 <- car_levene(x, g)
 res2 <- suppressWarnings(row_levene(x, g))
 stopifnot(all.equal(res1, res2))
 
+# large sample
+x <- rnorm(3 * 10^6)
+g <- rep(letters[1:3], each=10^6)
+res1 <- car_levene(x, g)
+res2 <- row_levene(x, g)
+stopifnot(all.equal(res1, res2))
+
 # TODO: add tests for Inf and -Inf values once decided how to handle them.
 
 
