@@ -117,6 +117,13 @@ res1 <- base_oneway_equalvar2(x, g)
 res2 <- row_oneway_equalvar(x, g)
 stopifnot(all.equal(res1, res2))
 
+# large sample
+x <- rnorm(3 * 10^6)
+g <- rep(letters[1:3], each=10^6)
+res1 <- base_oneway_equalvar2(x, g)
+res2 <- row_oneway_equalvar(x, g)
+stopifnot(all.equal(res1, res2))
+
 # TODO: add tests for Inf and -Inf values once decided how to handle them.
 
 
