@@ -101,6 +101,14 @@ res1 <- base_wilcoxon_onesample(x, alternative=pars[,1], exact=pars[,2], correct
 res2 <- row_wilcoxon_onesample(x, alternative=pars[,1], exact=pars[,2], correct=pars[,3])
 stopifnot(all.equal(res1, res2))
 
+# large sample
+pars <- expand.grid(c("t","g","l"), c(TRUE, FALSE), stringsAsFactors=FALSE)
+x    <- rnorm(10^6)
+x    <- matrix(x, nrow=nrow(pars), ncol=length(x), byrow=TRUE)
+res1 <- base_wilcoxon_onesample(x, alternative=pars[,1], correct=pars[,2])
+res2 <- row_wilcoxon_onesample(x, alternative=pars[,1], correct=pars[,2])
+stopifnot(all.equal(res1, res2))
+
 # has infinity
 x <- c(Inf, rnorm(4))
 res1 <- base_wilcoxon_onesample(x)
