@@ -137,6 +137,16 @@ res1 <- base_wilcoxon_twosample(x, y, alternative=pars[,1], exact=pars[,2], corr
 res2 <- row_wilcoxon_twosample(x, y, alternative=pars[,1], exact=pars[,2], correct=pars[,3])
 stopifnot(all.equal(res1, res2))
 
+# large sample
+pars <- expand.grid(c("t","g","l"), c(TRUE, FALSE), stringsAsFactors=FALSE)
+x <- rnorm(10^6)
+y <- rnorm(10^6)
+x <- matrix(x, nrow=nrow(pars), ncol=length(x), byrow=TRUE)
+y <- matrix(y, nrow=nrow(pars), ncol=length(y), byrow=TRUE)
+res1 <- base_wilcoxon_twosample(x, y, alternative=pars[,1], correct=pars[,2])
+res2 <- row_wilcoxon_twosample(x, y, alternative=pars[,1], correct=pars[,2])
+stopifnot(all.equal(res1, res2))
+
 # x has infinity
 x <- c(Inf, rnorm(4))
 y <- rnorm(5)
